Fix missing references for chap:wilbers.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,7 +28,7 @@
   timestamp = {2009.06.07}
 }
 
-@MANUAL{vCert'ik2009,
+@MANUAL{vCertik2009,
   title = {{SymPy}},
   author = {Ond\v{r}ej \v{C}ert\'{i}k and others},
   year = {2009},
@@ -3682,17 +3682,6 @@
   timestamp = {2009.06.06}
 }
 
-@INPROCEEDINGS{WilbersLangtangenEtAl2009,
-  author = {{I.~M.~Wilbers and H.~P.~Langtangen and \AA.~\O deg\aa rd}},
-  title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
-  booktitle = {MekIT'09, Fifth national conference on Computational Mechanics},
-  year = {2009},
-  editor = {B.~Skallerud and H.~I.~Andersson},
-  publisher = {Tapir Academic Press},
-  owner = {kent-and},
-  timestamp = {2009.06.08}
-}
-
 @ARTICLE{ImhofSharma2007,
   author = {M. G. Imhof and A. K. Sharma},
   title = {Seismostratigraphic inversion: Appraisal, ambiguity, and uncertainty},
@@ -5052,7 +5041,7 @@
   booktitle = {MekIT'07},
   year = {2007},
   editor = {B. Skallerud and H. I. Andersson},
-  publisher = {Tapir Akademisk Forlag},
+  publisher = {Tapir Academic Press},
   note = {http://www.ntnu.no/mekit07, http://butikk.tapirforlag.no/no/node/1073},
   category = {refproceedings},
   duplicate = {True},
@@ -6759,7 +6748,7 @@
 }
 
 @UNPUBLISHED{RingLangtangenEtAl,
-  author = {J. H. Ring and H. P. Langtangen and R. E. Bredesen and I. Wilbers},
+  author = {J. H. Ring and H. P. Langtangen and R. E. Bredesen and I. M. Wilbers},
   title = {{SciTools} software package},
   note = {\url{http://code.google.com/p/scitools}},
   owner = {logg},
@@ -7820,15 +7809,15 @@
   timestamp = {2009.06.07}
 }
 
-@INPROCEEDINGS{WilbersLangtangenEtAl2009a,
-  author = {Wilbers, Ilmar and Langtangen, Hans Petter and {\O}degard, {\r A}smund},
-  title = {Using Cython to Speed up Numerical Python Programs},
+@INPROCEEDINGS{WilbersLangtangenEtAl2009,
+  author = {{I. M. Wilbers and H. P. Langtangen and {\r A}. {\O}deg\aa rd}},
+  title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
   booktitle = {Proceedings of MekIT'09},
   year = {2009},
   editor = {B. Skallerud and H. I. Andersson},
   pages = {495-512},
   organization = {NTNU},
-  publisher = {Tapir},
+  publisher = {Tapir Academic Press},
   abstract = {The present study addresses a series of techniques for speeding up
 	numerical calculations in Python programs. The techniques are evaluated
 	in a benchmark problem involving finite difference solution of a
@@ -8207,21 +8196,66 @@
 }
 
 @UNPUBLISHED{www:vtk,
-  title = {Vtk software software package},
+  title = {{VTK} software package},
   note = {\url{http://www.kitware.com}},
-  key = {Vtk software package},
+  key = {VTK software package},
   owner = {logg},
   timestamp = {2009.06.06}
 }
 
 @OTHER{www:openmp,
-  key = {OpenMP Application Program Interface},
-  note = {URL: \url{http://openmp.org}},
+  key = {{OpenMP} {A}pplication {P}rogram {I}nterface},
+  note = {\url{http://openmp.org}},
   owner = {kent-and},
   timestamp = {2009.06.08},
   title = {{OpenMP} {A}pplication {P}rogram {I}nterface},
-  year = {2009}
 }
+
+@UNPUBLISHED{www:weave,
+ title = {{Weave}: Tools for inlining {C/C++} in {Python}},
+ note = "{\url{http://scipy.org/Weave}}",
+ key = {{Weave}: Tools for inlining {C/C++} in {Python}},
+ owner = {logg},
+ timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:cython,
+ title = {{Cython}: C-Extensions for {Python}},
+ note = "{\url{http://cython.org}}",
+ key = {{Cython}: C-Extensions for {Python}},
+ owner = {logg},
+ timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:swiginac,
+ title = {Swiginac {P}ython interface to {GiNaC}},
+ note = "{\url{http://swiginac.berlios.de}}",
+ key = {Swiginac {P}ython interface to {GiNaC}},
+ owner = {logg},
+ timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:pyrex,
+ title = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
+ note = "{\url{http://www.cosc.canterbury.ac.nz/greg.ewing/python/Pyrex}}",
+ key = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
+ owner = {logg},
+ timestamp = {2009.06.06}
+} 
+
+@UNPUBLISHED{www:mercurial,
+ title = {Mercurial software package},
+ note = "{\url{http://www.selenic.com/mercurial/wiki}}",
+ key = {Mercurial software package},
+ timestamp = {2009.06.06}
+} 
+
+@UNPUBLISHED{www:pkg-config,
+ title = {pkg-config software package},
+ note = "{\url{http://pkg-config.freedesktop.org}}",
+ key = {pkg-config software package},
+ timestamp = {2009.06.06}
+} 
 
 @UNPUBLISHED{www:top500,
   title = {Top500 Supercomputing Sites},
