Updated my application chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.3.1.
+% This file was created with JabRef 2.5b2.
 % Encoding: UTF8
 
 @STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
@@ -728,6 +728,17 @@
   number = {ANL-95/11 - Revision 2.1.5},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@MISC{BalayBuschelmanEtAl2001,
+  author = {Satish Balay and Kris Buschelman and William D. Gropp and Dinesh
+	Kaushik and Matthew G. Knepley and Lois Curfman McInnes and Barry
+	F. Smith and Hong Zhang},
+  title = {{PETSc} {W}eb page},
+  howpublished = {URL:\url{http://www.mcs.anl.gov/petsc}},
+  year = {2001},
+  timestamp = {2008.10.10},
+  url = {http://www.mcs.anl.gov/petsc}
 }
 
 @INPROCEEDINGS{BalayGroppEtAl1997,
@@ -1866,6 +1877,20 @@
   timestamp = {2009.06.07}
 }
 
+@ARTICLE{ChristieGriffithsEtAl1976,
+  author = {Christie, I. and Griffiths, DF and Mitchell, AR and Zienkiewicz,
+	OC},
+  title = {{Finite element methods for second order differential equations with
+	significant first derivatives}},
+  journal = {International Journal for Numerical Methods in Engineering},
+  year = {1976},
+  volume = {10},
+  pages = {1389-1396},
+  number = {6},
+  publisher = {John Wiley \& Sons, Ltd New York},
+  timestamp = {2009.07.02}
+}
+
 @ARTICLE{Ciarlet1975,
   author = {Ciarlet, P.G.},
   title = {Lectures on the finite element method},
@@ -2635,21 +2660,6 @@
   timestamp = {2009.06.06}
 }
 
-@INPROCEEDINGS{FalgoutYang2002a,
-  author = {Robert D. Falgout and Ulrike Meier Yang},
-  title = {hypre: A Library of High Performance Preconditioners},
-  booktitle = {ICCS '02: Proceedings of the International Conference on Computational
-	Science-Part III},
-  year = {2002},
-  pages = {632--641},
-  address = {London, UK},
-  publisher = {Springer-Verlag},
-  file = {Falg_2002_632_inproc.pdf:Falg_2002_632_inproc.pdf:PDF;Falg_2002_632_inproc.pdf:Falg_2002_632_inproc.pdf:PDF},
-  isbn = {3-540-43594-8},
-  owner = {logg},
-  timestamp = {2008.09.19}
-}
-
 @PHDTHESIS{Felippa1966,
   author = {Felippa, C.A.},
   title = {Refined Finite Element Analysis of Linear and Nonlinear Two-dimensional
@@ -2748,16 +2758,16 @@
 	on couplons in a variety of skeletal and cardiac muscles, which is
 	useful in modeling calcium release events, both macroscopic and microscopic
 	("sparks").},
-  file = {Fran_1999_1528.pdf:Fran_1999_1528.pdf:PDF;Fran_1999_1528.pdf:Fran_1999_1528.pdf:PDF},
+  file = {Fran_1999_1528.pdf:Fran_1999_1528.pdf:PDF},
   key = {137},
   keywords = {Animals, Calcium, Calcium Channels, Cell Membrane, Chickens, Dogs,
 	Electron, Fishes, Freeze Fracturing, Guinea Pigs, Heart, In Vitro,
 	L-Type, Mice, Microscopy, Muscle, Myocardium, P.H.S., Ranidae, Rats,
 	Research Support, Ryanodine Receptor Calcium Release Channel, Sarcoplasmic
 	Reticulum, Skeletal, U.S. Gov't, 10465763},
-  owner = {logg},
+  pdf = {Fran_1999_1528.pdf},
   pmid = {10465763},
-  timestamp = {2009.06.07},
+  timestamp = {2009.08.10},
   url = {http://www.biophysj.org/cgi/content/full/77/3/1528}
 }
 
@@ -2889,9 +2899,9 @@
   volume = {81},
   pages = {2340-2361},
   number = {25},
-  file = {Gill_1977_2340.pdf:Gill_1977_2340.pdf:PDF;Gill_1977_2340.pdf:Gill_1977_2340.pdf:PDF},
+  file = {Gill_1977_2340.pdf:Gill_1977_2340.pdf:PDF},
   issn = {0022-3654},
-  owner = {logg},
+  pdf = {Gill_1977_2340.pdf},
   timestamp = {2008.09.17},
   url = {http://pubs3.acs.org/acs/journals/doilookup?in_doi=10.1021/j100540a008}
 }
@@ -2946,8 +2956,8 @@
   pages = {441--501},
   number = {3},
   month = {Dec},
-  file = {Grah_1947_441.pdf:Grah_1947_441.pdf:PDF;Grah_1947_441.pdf:Grah_1947_441.pdf:PDF},
-  owner = {logg},
+  file = {Grah_1947_441.pdf:Grah_1947_441.pdf:PDF},
+  pdf = {Grah_1947_441.pdf},
   pmid = {18895519},
   timestamp = {2009.02.13}
 }
@@ -3008,9 +3018,8 @@
 	Sarcoplasmic Reticulum, Signal Transducing, Signal Transduction,
 	Stochastic Processes, Structure-Activity Relationship, Time Factors,
 	U.S. Gov't, Voltage-Gated, beta, beta-1, 12496068},
-  owner = {logg},
   pmid = {12496068},
-  timestamp = {2009.06.07},
+  timestamp = {2009.08.10},
   url = {http://www.biophysj.org/cgi/content/full/83/6/2918}
 }
 
@@ -3079,7 +3088,7 @@
 	This study leads to future work on the molecular basis of E-C coupling
 	with a physiological concentration of Ca ions permeating the Ca channel.},
   doi = {10.1016/S0006-3495(01)76242-X},
-  file = {Guia_2001_2742.pdf:Guia_2001_2742.pdf:PDF;Guia_2001_2742.pdf:Guia_2001_2742.pdf:PDF},
+  file = {Guia_2001_2742.pdf:Guia_2001_2742.pdf:PDF},
   institution = {Laboratory of Cardiovascular Sciences, Gerontology Research Center,
 	National Institute on Aging, National Institutes of Health, Baltimore,
 	Maryland 21224, USA.},
@@ -3089,7 +3098,7 @@
 	Conductivity; Humans; Ion Channel Gating, drug effects; Ion Transport,
 	drug effects; Male; Membrane Potentials, drug effects; Myocardium,
 	cytology/metabolism; Patch-Clamp Techniques; Rats; Rats, Sprague-Dawley},
-  owner = {logg},
+  pdf = {Guia_2001_2742.pdf},
   pii = {S0006-3495(01)76242-X},
   pmid = {11371449},
   timestamp = {2009.03.06},
@@ -3466,7 +3475,6 @@
   publisher = {Sinauer, Sunderland, MA},
   year = {2001},
   author = {Bertil Hille},
-  owner = {logg},
   timestamp = {2008.09.01}
 }
 
@@ -3682,6 +3690,30 @@
   timestamp = {2009.06.06}
 }
 
+@INPROCEEDINGS{WilbersLangtangenEtAl2009,
+  author = {{I. M. Wilbers and H. P. Langtangen and {\r A}. {\O}deg\aa rd}},
+  title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
+  booktitle = {Proceedings of MekIT'09},
+  year = {2009},
+  editor = {B. Skallerud and H. I. Andersson},
+  pages = {495-512},
+  organization = {NTNU},
+  publisher = {Tapir Academic Press},
+  abstract = {The present study addresses a series of techniques for speeding up
+	numerical calculations in Python programs. The techniques are evaluated
+	in a benchmark problem involving finite difference solution of a
+	wave equation. Our aim is to find the optimal mix of user-friendly,
+	high-level, and safe programming in Python with more detailed and
+	more error-prone low-level programming in compiled languages. In
+	particular, we present and evaluate Cython, which is a new software
+	tool that combines high- and low-level programming in an attractive
+	way with promising performance. Cython is compared to more well-known
+	tools such as F2PY, Weave, and Instant. With the mentioned tools,
+	Python has a significant potential as programming platform in computational
+	mechanics.},
+  isbn = {978-82-519-2421-4}
+}
+
 @ARTICLE{ImhofSharma2007,
   author = {M. G. Imhof and A. K. Sharma},
   title = {Seismostratigraphic inversion: Appraisal, ambiguity, and uncertainty},
@@ -3750,8 +3782,7 @@
 	Myocardium, Non-P.H.S., Non-U.S. Gov't, Research Support, Ryanodine
 	Receptor Calcium Release Channel, Sarcoplasmic Reticulum, Time Factors,
 	U.S. Gov't, 9512016},
-  owner = {logg},
-  timestamp = {2009.06.07},
+  timestamp = {2009.08.10},
   url = {http://www.biophysj.org/cgi/content/full/74/3/1149}
 }
 
@@ -3898,6 +3929,34 @@
   owner = {massing},
   publisher = {Elsevier},
   timestamp = {2009.05.27}
+}
+
+@ARTICLE{JohnKnobloch2007,
+  author = {Volker John and Petr Knobloch},
+  title = {On spurious oscillations at layers diminishing (SOLD) methods for
+	convection-diffusion equations: Part I - A review},
+  journal = {Computer Methods in Applied Mechanics and Engineering},
+  year = {2007},
+  volume = {196},
+  pages = {2197 - 2215},
+  number = {17-20},
+  abstract = {An unwelcome feature of the popular streamline upwind/Petrov-Galerkin
+	(SUPG) stabilization of convection-dominated convection-diffusion
+	equations is the presence of spurious oscillations at layers. Since
+	the mid of the 1980s, a number of methods have been proposed to remove
+	or, at least, to diminish these oscillations without leading to excessive
+	smearing of the layers. The paper gives a review and state of the
+	art of these methods, discusses their derivation, proposes some alternative
+	choices of parameters in the methods and categorizes them. Some numerical
+	studies which supplement this review provide a first insight into
+	the advantages and drawbacks of the methods.},
+  doi = {DOI: 10.1016/j.cma.2006.11.013},
+  file = {John_2007_2197.pdf:John_2007_2197.pdf:PDF},
+  issn = {0045-7825},
+  keywords = {Convection-diffusion equations},
+  pdf = {John_2007_2197.pdf},
+  timestamp = {2009.07.02},
+  url = {http://www.sciencedirect.com/science/article/B6V29-4MPC439-2/2/e985dbff270415d66411a8a1d6cf9f80}
 }
 
 @ARTICLE{Johnson1988,
@@ -6128,8 +6187,8 @@
   author = {J.~ K.~ Nilsen and X.~ Cai and B.~ H{\o}yland and H.~P.~ Langtangen},
   title = {Simplifying Parallelization of Scientific Codes by a Function-Centric
 	Approach in {Python}},
-  note = {In preparation},
   year = {2008},
+  note = {In preparation},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -6460,7 +6519,6 @@
 	Lanthanum, Models, Myocardium, Newborn, Nifedipine, Non-U.S. Gov't,
 	P.H.S., Rats, Research Support, Ryanodine, Sarcolemma, Sarcoplasmic
 	Reticulu, Terpenes, Thapsigargin, Theoretical, U.S. Gov't, m, 1404341},
-  owner = {logg},
   pmid = {1404341},
   timestamp = {2006.01.18},
   url = {http://dx.doi.org/10.1007/BF00232055}
@@ -6680,14 +6738,14 @@
 	accumulate in bursts of calcium blips that may be central for the
 	understanding of cellular calcium dynamics.},
   doi = {10.1529/biophysj.106.099879},
-  file = {Ruedi_2007_1847.pdf:Ruedi_2007_1847.pdf:PDF;Ruedi_2007_1847.pdf:Ruedi_2007_1847.pdf:PDF},
+  file = {Ruedi_2007_1847.pdf:Ruedi_2007_1847.pdf:PDF},
   institution = {Institut für Physik, Humboldt-Universität zu Berlin, Berlin, Germany.
 	sten.ruediger@gmail.com},
   keywords = {Algorithms; Biophysics; Calcium Signaling, physiology; Computer Simulation;
 	Inositol 1,4,5-Trisphosphate Receptors, metabolism; Ion Channel Gating,
 	physiology; Models, Biological; Patch-Clamp Techniques; Stochastic
 	Processes},
-  owner = {logg},
+  pdf = {Ruedi_2007_1847.pdf},
   pii = {biophysj.106.099879},
   pmid = {17496042},
   timestamp = {2008.09.03},
@@ -7061,6 +7119,16 @@
   timestamp = {2009.06.06}
 }
 
+@MISC{Si2007,
+  author = {Hang Si},
+  title = {Tet{G}en. A Quality Tetrahedral Mesh Generator and Three-Dimensional
+	Delaunay Triangulator.},
+  howpublished = {URL:\url{http://tetgen.berlios.de}},
+  year = {2007},
+  timestamp = {2008.09.25},
+  url = {http://tetgen.berlios.de}
+}
+
 @INPROCEEDINGS{SiekLumsdaine1999,
   author = {J. Siek and A. Lumsdaine},
   title = {A Modern Framework for Portable High-Performance Numerical Linear
@@ -7230,8 +7298,7 @@
 	Tight Junctions, Tissue Distribution, Transcription, Transformed,
 	U.S. Gov't, Variation (Genetics), Wheat Germ Agglutinins, Wistar,
 	Xanthenes, n, ndicators and Reagents, 10024300},
-  owner = {logg},
-  timestamp = {2009.06.07},
+  timestamp = {2009.08.10},
   url = {http://circres.ahajournals.org/cgi/content/full/84/3/266}
 }
 
@@ -7267,7 +7334,7 @@
 	from an effective "volume expansion" of the diad space. Furthermore,
 	the layer of increased [{C}a$^{2+}$] close to the sarcolemmal membrane
 	can act as a fast buffer.},
-  file = {Soel_1997_97.pdf:Soel_1997_97.pdf:PDF;Soel_1997_97.pdf:Soel_1997_97.pdf:PDF},
+  file = {Soel_1997_97.pdf:Soel_1997_97.pdf:PDF},
   key = {5},
   keywords = {Binding Sites, Calcium, Calcium Channels, Cardiovascular, Cell Membrane,
 	Computer Simulation, Cytosol, Heart, Ion Channel Gating, Ion Transport,
@@ -7275,8 +7342,8 @@
 	Non-U.S. Gov't, Research Support, Ryanodine Receptor Calcium Release
 	Channel, Sarcolemma, Sarcoplasmic Reticulum, Signal Transduction,
 	Structural, Time Factors, 9199775},
-  owner = {logg},
-  timestamp = {2009.06.07},
+  pdf = {Soel_1997_97.pdf},
+  timestamp = {2009.08.10},
   url = {http://www.pubmedcentral.gov/articlerender.fcgi?tool=pubmed&pubmedid=9199775}
 }
 
@@ -7319,7 +7386,7 @@
 	cooperativity to discriminate against RyR activation by background
 	calcium. If the ryanodine receptor was represented, instead, by a
 	phenomenological four-state gating scheme, with channel opening resulting
-	from simultaneous binding of two Ca2+ ions, and either calcium-dependent
+	from simultaneous binding of two {C}a$^{2+}$ ions, and either calcium-dependent
 	or activation-linked inactivation, the simulations gave a good semiquantitative
 	accounting for the macroscopic features of excitation-contraction
 	coupling. It was possible to restore stability to a model based on
@@ -7329,7 +7396,7 @@
 	RyRs. Such allosteric coupling between RyRs may be a function of
 	the foot process and lattice array, explaining their conservation
 	during evolution.},
-  file = {Ster_1999_469.pdf:Ster_1999_469.pdf:PDF;Ster_1999_469.pdf:Ster_1999_469.pdf:PDF},
+  file = {Ster_1999_469.pdf:Ster_1999_469.pdf:PDF},
   institution = {Laboratory of Cardiovascular Science, National Institute on Aging,
 	National Institutes of Health, Baltimore, Maryland 21224, USA. sternM@grc.nia.nih.gov},
   keywords = {Algorithms; Animals; Calcium Channels, L-Type; Calcium Channels, physiology;
@@ -7338,7 +7405,7 @@
 	Muscle Proteins, physiology; Myocardial Contraction, physiology;
 	Rats; Ryanodine Receptor Calcium Release Channel, physiology; Sarcoplasmic
 	Reticulum, metabolism},
-  owner = {logg},
+  pdf = {Ster_1999_469.pdf},
   pmid = {10051521},
   timestamp = {2008.09.04},
   url = {http://www.jgp.org/cgi/content/abstract/113/3/469}
@@ -7504,12 +7571,26 @@
 	to RyR2 binding sites, thus increasing excitation-contraction coupling
 	gain.},
   doi = {10.1529/biophysj.106.089425},
-  file = {Tans_2007_3379.pdf:Tans_2007_3379.pdf:PDF;Tans_2007_3379.pdf:Tans_2007_3379.pdf:PDF},
-  owner = {logg},
+  file = {Tans_2007_3379.pdf:Tans_2007_3379.pdf:PDF},
+  pdf = {Tans_2007_3379.pdf},
   pii = {biophysj.106.089425},
   pmid = {17325016},
   timestamp = {2007.06.18},
   url = {http://dx.doi.org/10.1529/biophysj.106.089425}
+}
+
+@ARTICLE{TezduyarPark1986,
+  author = {Tezduyar, TE and Park, YJ},
+  title = {{Discontinuity-capturing finite element formulations for nonlinear
+	convection-diffusion-reaction equations.}},
+  journal = {Comp. Methods Appl. Mech. Eng.},
+  year = {1986},
+  volume = {59},
+  pages = {307--325},
+  number = {3},
+  file = {Tezd_1986_307.pdf:Tezd_1986_307.pdf:PDF},
+  pdf = {Tezd_1986_307.pdf},
+  timestamp = {2009.07.02}
 }
 
 @BOOK{Turek1999,
@@ -7671,7 +7752,6 @@
   number = {2},
   doi = {10.1137/0913035},
   keywords = {Bi-CG; CG-S; nonsymmetric linear systems; iterative solver; preconditioning},
-  owner = {logg},
   publisher = {SIAM},
   timestamp = {2008.09.19},
   url = {http://link.aip.org/link/?SCE/13/631/1}
@@ -7807,30 +7887,6 @@
   mrnumber = {MR0483954 (58 \#3905)},
   owner = {logg},
   timestamp = {2009.06.07}
-}
-
-@INPROCEEDINGS{WilbersLangtangenEtAl2009,
-  author = {{I. M. Wilbers and H. P. Langtangen and {\r A}. {\O}deg\aa rd}},
-  title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
-  booktitle = {Proceedings of MekIT'09},
-  year = {2009},
-  editor = {B. Skallerud and H. I. Andersson},
-  pages = {495-512},
-  organization = {NTNU},
-  publisher = {Tapir Academic Press},
-  abstract = {The present study addresses a series of techniques for speeding up
-	numerical calculations in Python programs. The techniques are evaluated
-	in a benchmark problem involving finite difference solution of a
-	wave equation. Our aim is to find the optimal mix of user-friendly,
-	high-level, and safe programming in Python with more detailed and
-	more error-prone low-level programming in compiled languages. In
-	particular, we present and evaluate Cython, which is a new software
-	tool that combines high- and low-level programming in an attractive
-	way with promising performance. Cython is compared to more well-known
-	tools such as F2PY, Weave, and Instant. With the mentioned tools,
-	Python has a significant potential as programming platform in computational
-	mechanics.},
-  isbn = {978-82-519-2421-4}
 }
 
 @ARTICLE{WohlmuthHoppe1999,
@@ -8051,6 +8107,14 @@
   timestamp = {2009.06.07}
 }
 
+@UNPUBLISHED{www:cython,
+  title = {{Cython}: C-Extensions for {Python}},
+  note = {{\url{http://cython.org}}},
+  key = {{Cython}: C-Extensions for {Python}},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
 @UNPUBLISHED{www:diffpack,
   title = {Diffpack software package},
   note = {\url{http://www.diffpack.com}},
@@ -8088,6 +8152,13 @@
   note = {\url{http://www.llnl.gov/CASC/hypre/}},
   key = {{Hypre}},
   owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:mercurial,
+  title = {Mercurial software package},
+  note = {{\url{http://www.selenic.com/mercurial/wiki}}},
+  key = {Mercurial software package},
   timestamp = {2009.06.06}
 }
 
@@ -8131,6 +8202,14 @@
   timestamp = {2009.06.06}
 }
 
+@OTHER{www:openmp,
+  key = {{OpenMP} {A}pplication {P}rogram {I}nterface},
+  note = {\url{http://openmp.org}},
+  owner = {kent-and},
+  timestamp = {2009.06.08},
+  title = {{OpenMP} {A}pplication {P}rogram {I}nterface}
+}
+
 @UNPUBLISHED{www:petsc,
   title = {{PETSc} software package},
   note = {\url{http://www.anl.gov/petsc}},
@@ -8139,10 +8218,25 @@
   timestamp = {2009.06.06}
 }
 
+@UNPUBLISHED{www:pkg-config,
+  title = {pkg-config software package},
+  note = {{\url{http://pkg-config.freedesktop.org}}},
+  key = {pkg-config software package},
+  timestamp = {2009.06.06}
+}
+
 @UNPUBLISHED{www:pymat,
   title = {PyMat {Python-Matlab} interface},
   note = {\url{http://claymore.engineer.gvsu.edu/~steriana/Python}},
   key = {PyMat {Python-Matlab} interface},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:pyrex,
+  title = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
+  note = {{\url{http://www.cosc.canterbury.ac.nz/greg.ewing/python/Pyrex}}},
+  key = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -8167,6 +8261,14 @@
   title = {{SWIG} software package},
   note = {\url{http://www.swig.org}},
   key = {SWIG software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:swiginac,
+  title = {Swiginac {P}ython interface to {GiNaC}},
+  note = {{\url{http://swiginac.berlios.de}}},
+  key = {Swiginac {P}ython interface to {GiNaC}},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -8203,65 +8305,19 @@
   timestamp = {2009.06.06}
 }
 
-@OTHER{www:openmp,
-  key = {{OpenMP} {A}pplication {P}rogram {I}nterface},
-  note = {\url{http://openmp.org}},
-  owner = {kent-and},
-  timestamp = {2009.06.08},
-  title = {{OpenMP} {A}pplication {P}rogram {I}nterface},
-}
-
 @UNPUBLISHED{www:weave,
- title = {{Weave}: Tools for inlining {C/C++} in {Python}},
- note = "{\url{http://scipy.org/Weave}}",
- key = {{Weave}: Tools for inlining {C/C++} in {Python}},
- owner = {logg},
- timestamp = {2009.06.06}
+  title = {{Weave}: Tools for inlining {C/C++} in {Python}},
+  note = {{\url{http://scipy.org/Weave}}},
+  key = {{Weave}: Tools for inlining {C/C++} in {Python}},
+  owner = {logg},
+  timestamp = {2009.06.06}
 }
-
-@UNPUBLISHED{www:cython,
- title = {{Cython}: C-Extensions for {Python}},
- note = "{\url{http://cython.org}}",
- key = {{Cython}: C-Extensions for {Python}},
- owner = {logg},
- timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{www:swiginac,
- title = {Swiginac {P}ython interface to {GiNaC}},
- note = "{\url{http://swiginac.berlios.de}}",
- key = {Swiginac {P}ython interface to {GiNaC}},
- owner = {logg},
- timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{www:pyrex,
- title = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
- note = "{\url{http://www.cosc.canterbury.ac.nz/greg.ewing/python/Pyrex}}",
- key = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
- owner = {logg},
- timestamp = {2009.06.06}
-} 
-
-@UNPUBLISHED{www:mercurial,
- title = {Mercurial software package},
- note = "{\url{http://www.selenic.com/mercurial/wiki}}",
- key = {Mercurial software package},
- timestamp = {2009.06.06}
-} 
-
-@UNPUBLISHED{www:pkg-config,
- title = {pkg-config software package},
- note = "{\url{http://pkg-config.freedesktop.org}}",
- key = {pkg-config software package},
- timestamp = {2009.06.06}
-} 
 
 @UNPUBLISHED{www:top500,
   title = {Top500 Supercomputing Sites},
-  note = {\url{http://www.top500.org}},
   month = {November},
   year = {2008},
+  note = {\url{http://www.top500.org}},
   key = {Top500 Supercomputing Sites},
   owner = {logg},
   timestamp = {2009.06.06}
