--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -5,9 +5,15 @@
 \usepackage{a4wide}
 \usepackage{fancyhdr}
 \usepackage{fancyvrb}
+
+
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{amsthm}
+\usepackage{amsmath}
+
+\usepackage{amsfonts}
+\usepackage{amsbsy}
+
 \usepackage{psfrag}
 \usepackage{makeidx}
 \usepackage{longtable}
@@ -26,9 +32,10 @@
 \usepackage{url}
 \usepackage{subfigure}
 \usepackage{changepage}
+\usepackage{xspace}
 
 % Set margins
-\usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry} 
+\usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry}
 
 % Fonts and chapter styles
 \usepackage{sectsty}
@@ -101,7 +108,9 @@
 \newcommand{\babuska}{Babu\v ska}
 
 % Math operators
-\DeclareMathOperator{\PEl}{PE_l}
+\DeclareMathOperator{\PE}{PE}
+\DeclareMathOperator{\PEe}{PE_e}
+\DeclareMathOperator{\e}{e}
 
 % Example environment
 \newtheorem{example}{Example}[chapter]
