Changed citation style to natbib author and year style.  - I had to modify some empty \city{} to make this work  - The natbib package has two basic citation commands, \citet and \citep(\cite)    for textual and parenthetical citations, respectively. If you want to refere to a    an author in the text use the \citet{} command.

--- a/book.tex
+++ b/book.tex
@@ -72,7 +72,7 @@
 \cleardoublepage
 \pagestyle{empty}
 \renewcommand\bibname{References}
-\bibliographystyle{alpha}
+\bibliographystyle{abbrvnat}
 \bibliography{bibliography}
 
 % Appendix
