--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -33,6 +33,9 @@
 \usepackage{subfigure}
 \usepackage{changepage}
 \usepackage{xspace}
+\usepackage[round,authoryear,comma,sort]{natbib}
+
+\renewcommand{\cite}[1]{\citep{#1}}
 
 % Set margins
 \usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry}
