Added some macros for different packages

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -79,9 +79,12 @@
 % Project names
 \newcommand{\projectfont}[1]{{#1}}
 \newcommand{\ufl}{\projectfont{UFL}}
+\newcommand{\fiat}{\projectfont{FIAT}}
+\newcommand{\ferrari}{\projectfont{FErari}}
 \newcommand{\sfc}{\projectfont{SFC}}
 \newcommand{\ufc}{\projectfont{UFC}}
 \newcommand{\ffc}{\projectfont{FFC}}
+\newcommand{\viper}{\projectfont{Viper}}
 \newcommand{\pydolfin}{\projectfont{PyDOLFIN}}
 \renewcommand{\dolfin}{\projectfont{DOLFIN}}
 \renewcommand{\fenics}{\projectfont{FEniCS}}
@@ -89,10 +92,19 @@
 % Package names
 \newcommand{\packagefont}[1]{{#1}}
 \newcommand{\numpy}{\packagefont{NumPy}}
-\newcommand{\python}{\packagefont{python}}
+\newcommand{\scipy}{\packagefont{SciPy}}
+\newcommand{\sympy}{\packagefont{SymPy}}
+\newcommand{\python}{\packagefont{Python}}
 \newcommand{\petsc}{\packagefont{PETSc}}
-\newcommand{\diffsim}{\packagefont{diffsim}}
+\newcommand{\diffsim}{\packagefont{DiffSim}}
 \newcommand{\tetgen}{\packagefont{TetGen}}
+\newcommand{\swig}{\packagefont{SWIG}}
+\newcommand{\trilinos}{\packagefont{Trilinos}}
+\newcommand{\vtk}{\packagefont{VTK}}
+\newcommand{\itk}{\packagefont{ITK}}
+\newcommand{\ginac}{\packagefont{GiNaC}}
+\newcommand{\hypre}{\packagefont{HYPRE}}
+\newcommand{\swig}{\packagefont{SWIG}}
 \newcommand{\emp}[1]{\texttt{#1}}
 \newcommand{\bit}{\begin{itemize}}
 \newcommand{\eit}{\end{itemize}}
