Work on pamr chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8020,7 +8020,7 @@
 }
 
 @TECHREPORT{Zhang2005,
-  author = {Lin-bo Zhang},
+  author = {{Lin-bo} Zhang},
   title = {A {P}arallel {A}lgorithm for {A}daptive {L}ocal {R}efinement of {T}etrahedral
 	{M}eshes {U}sing {B}isection},
   institution = {Institute of Computational Mathematics and Scientific/Engineering
