Add hyperref package for easy navigation of the PDF file.

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -1,11 +1,13 @@
 \documentclass[12pt]{book}
 
+% Hyperlinks
+\usepackage{hyperref}
+
 % Packages
 \usepackage{graphicx}
 \usepackage{a4wide}
 \usepackage{fancyhdr}
 \usepackage{fancyvrb}
-
 
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -33,8 +35,9 @@
 \usepackage{subfigure}
 \usepackage{changepage}
 \usepackage{xspace}
-\usepackage[round,authoryear,comma,sort]{natbib}
 
+% Bibliography
+\usepackage[round,authoryear,comma,sort]{natbib}
 \renewcommand{\cite}[1]{\citep{#1}}
 
 % Set margins
@@ -107,7 +110,6 @@
 \newcommand{\emp}[1]{\texttt{#1}}
 \newcommand{\bit}{\begin{itemize}}
 \newcommand{\eit}{\end{itemize}}
-
 
 % Notation macros
 \newcommand{\dx}{\, \mathrm{d}x}
