added chapter on block preconditioning.

--- a/book.tex
+++ b/book.tex
@@ -61,6 +61,7 @@
 \includechapter{oelgaard-1}
 \includechapter{nikbakht}
 \includechapter{mardal-3}
+\includechapter{mardal-4}
 \includechapter{schroll}
 \includechapter{hoffman-3}
 \includechapter{rognes}
