Comment out some chapter that prevent compilation.

--- a/book.tex
+++ b/book.tex
@@ -56,18 +56,19 @@
 \includechapter{lopes}
 \includechapter{shan}
 \includechapter{alnes-4}
-\includechapter{hake}
+%\includechapter{hake}
 \includechapter{lezar}
 \includechapter{oelgaard-1}
 \includechapter{nikbakht}
 \includechapter{mardal-3}
-\includechapter{mardal-4}
+%\includechapter{mardal-4}
 \includechapter{schroll}
 \includechapter{hoffman-3}
 \includechapter{rognes}
 
 % Authors
-% Include list of authors and affiliation here (so we don't need to write out affiliation, funding etc with each paper)
+% Include list of authors and affiliation here (so we don't need to write out 
+% affiliation, funding etc with each paper)
 
 % References
 \cleardoublepage
