Added rognes application chapter.
Had to make some modification in frontmatter to use with
pythonhighlight etc...

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -3,6 +3,8 @@
 % Hyperlinks
 \usepackage{hyperref}
 
+
+
 % Packages
 \usepackage{graphicx}
 \usepackage{a4wide}
@@ -97,7 +99,7 @@
 \newcommand{\numpy}{\packagefont{NumPy}}
 \newcommand{\scipy}{\packagefont{SciPy}}
 \newcommand{\sympy}{\packagefont{SymPy}}
-\newcommand{\python}{\packagefont{Python}}
+%\newcommand{\python}{\packagefont{Python}}
 \newcommand{\petsc}{\packagefont{PETSc}}
 \newcommand{\diffsim}{\packagefont{DiffSim}}
 \newcommand{\tetgen}{\packagefont{TetGen}}
@@ -110,6 +112,7 @@
 \newcommand{\emp}[1]{\texttt{#1}}
 \newcommand{\bit}{\begin{itemize}}
 \newcommand{\eit}{\end{itemize}}
+\newcommand{\slepc}{\projectfont{SLEPc}}
 
 % Notation macros
 \newcommand{\dx}{\, \mathrm{d}x}
@@ -123,10 +126,14 @@
 \newcommand{\nedelec}{N\'ed\'elec}
 \newcommand{\babuska}{Babu\v ska}
 
+\usepackage{pythonhighlight}
+
 % Math operators
 \DeclareMathOperator{\PE}{PE}
 \DeclareMathOperator{\PEe}{PE_e}
 \DeclareMathOperator{\e}{e}
+\DeclareMathOperator{\Div}{div}
+\DeclareMathOperator{\Grad}{grad}
 
 % Example environment
 \newtheorem{example}{Example}[chapter]
