Fixes for a removed \python command   - update for newest PyDOLFIN version   - Removed some newcommands

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8131,6 +8131,19 @@
   timestamp = {2009.06.06}
 }
 
+@article{pytrilinos,
+ author = {Sala, Marzio and Spotz, W. F. and Heroux, M. A.},
+ title = {PyTrilinos: High-performance distributed-memory solvers for Python},
+ journal = {ACM Trans. Math. Softw.},
+ volume = {34},
+ number = {2},
+ year = {2008},
+ issn = {0098-3500},
+ pages = {1--33},
+ doi = {http://doi.acm.org/10.1145/1326548.1326549},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
 @UNPUBLISHED{www:featflow,
   title = {{FEATFLOW} software package},
   note = {\url{http://www.featflow.de}},
