--- a/book.tex
+++ b/book.tex
@@ -56,7 +56,7 @@
 \includechapter{lopes}
 \includechapter{shan}
 \includechapter{alnes-4}
-%\includechapter{hake}
+\includechapter{hake}
 \includechapter{lezar}
 \includechapter{oelgaard-1}
 \includechapter{nikbakht}
