--- a/book.tex
+++ b/book.tex
@@ -55,13 +55,13 @@
 \includechapter{selim}
 \includechapter{lopes}
 \includechapter{shan}
-\includechapter{alnes-4}
+%\includechapter{alnes-4}
 \includechapter{hake}
 \includechapter{lezar}
 \includechapter{oelgaard-1}
 \includechapter{nikbakht}
-\includechapter{mardal-3}
-%\includechapter{mardal-4}
+%\includechapter{mardal-3}
+\includechapter{mardal-4}
 \includechapter{schroll}
 \includechapter{hoffman-3}
 \includechapter{rognes}
