Add submitted chapter [langtangen] (FEniCS tutorial).

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4973,12 +4973,22 @@ year = 2005
   timestamp = {2009.06.06}
 }
 
-@BOOK{Langtangen2006,
+@BOOK{Langtangen2006:2,
   title = {Python Scripting for Computational Science},
   publisher = {Springer},
   year = {2006},
   author = {H. P. Langtangen},
   edition = {second},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@BOOK{Langtangen2006,
+  title = {Python Scripting for Computational Science},
+  publisher = {Springer},
+  year = {2009},
+  author = {H. P. Langtangen},
+  edition = {third},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -4992,6 +5002,14 @@ year = 2005
   edition = {second},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@Book{Langtangen2009b,
+author =    {H. P. Langtangen},
+title =     {A Primer on Scientific Programming with Python},
+series =    {Texts in Computational Science and Engineering, vol 6},
+publisher = {Springer},
+year =      {2009},
 }
 
 @BOOK{Langtangen2003a,
@@ -8702,6 +8720,52 @@ MRREVIEWER = {Nima Geffen},
                   Universidad Polit\'ecnica de Valencia",
    year    = "2009"
 }
+
+@Book{Hetland2002,
+  author =       "M. L. Hetland",
+  title =        "Practical Python",
+  publisher =    "APress",
+  year =         "2002",
+}
+
+@Book{LearningPython,
+  author =       "M. Lutz",
+  title =        "Learning Python",
+  publisher =    "O'Reilly",
+  year =         "2007",
+  edition =      "third",
+}
+
+@Book{LutzPython2006,
+  author =       "M. Lutz",
+  title =        "Programming Python",
+  publisher =    "O'Reilly",
+  edition = "third",
+  year =         "2006",
+}
+
+@Book{PythonCookbook,
+  author =       "A. Martelli and D. Ascher",
+  title =        "Python Cookbook",
+  publisher =    "O'Reilly",
+  year =         "2005",
+  edition =      "second",
+}
+
+@Book{PyNutshell,
+  author =       "A. Martelli",
+  title =        "Python in a Nutshell",
+  publisher =    "O'Reilly",
+  year =         "2006",
+  edition =      "second",
+}
+
+@Unpublished{PythonTutorial,
+  title =       "The Python Tutorial",
+  key   =       "The Python Tutorial",
+  note =         "\url{http://docs.python.org/tutorial/}",
+}
+
 
 @comment{jabref-meta: fileDirectory:.;}
 
