--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -36,6 +36,10 @@
 \usepackage{changepage}
 \usepackage{xspace}
 
+% FIXME: Packages needed for [langtangen], why not graphicx?
+\usepackage{psfig}
+\usepackage{subfigure}
+
 % Bibliography
 \usepackage[round,authoryear,comma,sort]{natbib}
 \renewcommand{\cite}[1]{\citep{#1}}
