Reduce toc depth.

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -9,17 +9,16 @@
 \usepackage{fancyhdr}
 \usepackage{fancyvrb}
 
+% Font-related packages
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{amsmath}
-
 \usepackage{amsfonts}
 \usepackage{amsbsy}
+\usepackage{bm}
 
 \usepackage{psfrag}
 \usepackage{makeidx}
 \usepackage{longtable}
-\usepackage{here}
 \usepackage{array}
 \usepackage{algorithm}
 \usepackage{algorithmicx}
@@ -27,8 +26,6 @@
 \usepackage[procnames]{listings}
 \usepackage[usenames]{color}
 \usepackage{moreverb}
-\usepackage{fancyvrb}
-\usepackage{bm}
 \usepackage{algorithm}
 \usepackage{multicol}
 \usepackage{url}
@@ -47,12 +44,15 @@
 % Set margins
 \usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry}
 
+% Set table of contents depth
+\setcounter{tocdepth}{0}
+
 % Fonts and chapter styles
 \usepackage{sectsty}
-\sectionfont{\sf}
-\subsectionfont{\it}
 \usepackage[Sonny]{fncychap}
 \usepackage{newcent}
+
+% Headers
 \lhead{}
 \rhead{}
 
@@ -126,7 +126,7 @@
 \newcommand{\Hdiv}{H(\mathrm{div})}
 \newcommand{\Hcurl}{H(\mathrm{curl})}
 \newcommand{\nedelec}{N\'ed\'elec}
-\newcommand{\babuska}{Babu\v ska}
+\newcommand{\babuska}{Babu{\v}ska}
 
 \usepackage{pythonhighlight}
 
