Small fix in preamble.

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -126,7 +126,7 @@
 \newcommand{\Hdiv}{H(\mathrm{div})}
 \newcommand{\Hcurl}{H(\mathrm{curl})}
 \newcommand{\nedelec}{N\'ed\'elec}
-\newcommand{\babuska}{Babu{\v}ska}
+\newcommand{\babuska}{Babu\v{s}ka}
 
 \usepackage{pythonhighlight}
 
