--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -152,6 +152,10 @@
 % Code environment
 \DefineVerbatimEnvironment{code}{Verbatim}{frame=single,rulecolor=\color{blue}}
 
+\newcommand{\codeinput}[1]{\VerbatimInput[fontsize=\footnotesize,frame=single,rulecolor=\color{blue}]{#1}}
+
+
+
 % Create index
 \makeindex
 
