Some revisions to chapters/rognes and bibliography.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,6 +3,7 @@
 
 @STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
 
+
 @BOOK{Sagaut2005,
   title = {Large-Eddy Simulation for Incompressible Flows --- An Introduction},
   publisher = {Springer-Verlag},
@@ -8567,6 +8568,9 @@ MRREVIEWER = {Thomas Garrity},
   author = {Arnold, Douglas N. and Rognes, Marie E.},
   title = {Stability of {L}agrange elements for the mixed {L}aplacian},
   journal = {Calcolo},
+  volume = {46},
+  number = {4},
+  pages = {245--260},
   year = {2009},
 }
 
@@ -8694,9 +8698,9 @@ MRREVIEWER = {Nima Geffen},
 
 
 @UNPUBLISHED{www:ascot,
-  title = {{Automated Stability COndition Tester (ASCOT)}},
+  title = {{Automated Stability Condition Tester (ASCoT)}},
   author = {Marie E. Rognes},
-  note = {\url{http://www.fenics.org/wiki/ascot}},
+  note = {\url{https://launchpad.net/ascot}},
   year = {2009},
 }
 
@@ -8778,3 +8782,6 @@ MRREVIEWER = {Nima Geffen},
 2 ExplicitGroup:Goal oriented error estimators\;0\;;
 2 ExplicitGroup:Residual-based\;0\;;
 }
+
+
+
